--- a/최성은.html
+++ b/최성은.html
@@ -1,26 +1,19 @@
-<!DOCTYPE HTML>
-<head>
-  <title>SeongEun news</title> <meta charset="utf-8">
-</head>
 <body>
-  <h1><a href="index.html">성은 뉴스</a></h1>
+  <h1><><a>WIKIPEDIA/a></h1>
 
-<p><h2>2021년 7월호 성은신문 발간 </h2></p>
-2021년 7월 25일 성은신문이 발간되었다. 최근 인기를 끌고있는 프로그램 '나 혼자산다'
-출연진 최성은양의 활동들을 낱낱이 기록하는 조선시대의 승정원일기와 같은 형식으로
-성은신문이 발행 될 예정이다.<br>
-성은신문은 최성은양의 활동분야인
-'운동, 식단, 사진, 최애' 4가지 분야로 구분하여 작성될 예정이라고 밝혔으며
-아주 큰 인기를 끌 것으로 전망되고 있다. <br>
-성은신문은
--이 기자-
+<p><h2>최성은 그녀는 누구인가? </h2></p>
 
-
-  <ol>
-      <li><a href="운동.html">운동</a></li>
-      <li><a href="식단.html">식단</a></li>
-      <li><a href="화보.html">사진</a></li>
-      <li><a href="최애.html">최애</a></li>
-  </ol>
-  <h2></h2>
+      <ul><h3>최성은 프로필</h3><br>
+      <li>이름: 짱구 (본명: 최성은)</li>
+      <li>생년월일: 2004년 4월 24일 </li>
+      <li>나이: 시발살 (어우어우 실수^^)</li>
+      <li>행선지: 감자왕국(강원도 어딘가) </li>
+      <li>신분: 감자왕국 공주(병) </li>
+      <li>성격: 변태(만지는걸 선호함/S에 해당함)<br>            
+                내향적인탈을 쓴 미치광이 광란을 좋아함</li>
+      <li>질병: 저좀주목해주세요증 </li>
+      <li>이상형: 짱구</li>
+      <li>좋아하는 스포츠팀: 원주 DB 프로미</li>
+      <li>좋아하는 동물: 강아지(개),수달, </li>
+  </ul>
 </body>
