--- a/최성은.html
+++ b/최성은.html
@@ -14,6 +14,7 @@
       <li>질병: 저좀주목해주세요증 </li>
       <li>이상형: 짱구</li>
       <li>좋아하는 스포츠팀: 원주 DB 프로미</li>
-      <li>좋아하는 동물: 강아지(개),수달, </li>
+      <li>좋아하는 동물: 강아지(개),수달, 고양이, 코끼리, 비둘기^^ </li>
+      <li>유행어: 쯔읍!, 그러면 안돼지</li>
   </ul>
 </body>
