--- a/최성은.html
+++ b/최성은.html
@@ -2,8 +2,8 @@
   <h1><><a>WIKIPEDIA/a></h1>
 
 <p><h2>최성은 그녀는 누구인가? </h2></p>
-
-      <ul><h3>최성은 프로필</h3><br>
+<img src="최성은얼굴1" width="100%">
+      <ul><h3>최성은 프로필</h3>
       <li>이름: 짱구 (본명: 최성은)</li>
       <li>생년월일: 2004년 4월 24일 </li>
       <li>나이: 시발살 (어우어우 실수^^)</li>
@@ -14,7 +14,8 @@
       <li>질병: 저좀주목해주세요증 </li>
       <li>이상형: 짱구</li>
       <li>좋아하는 스포츠팀: 원주 DB 프로미</li>
-      <li>좋아하는 동물: 강아지(개),수달, 고양이, 코끼리, 비둘기^^ </li>
       <li>유행어: 쯔읍!, 그러면 안돼지</li>
+      <li>좋아하는 동물: 강아지(개),수달, 고양이, 코끼리, 새^^ <img src="비둘기" width="100%"> </li>
+      
   </ul>
 </body>
