--- a/최성은.html
+++ b/최성은.html
@@ -1,10 +1,11 @@
 <body>
   <h1><a>WIKIPEDIA</a></h1>
 
-<p><h2>최성은 그녀는 누구인가? </h2></p>
-<img src="최성은얼굴1" width="100%">
-      <ul><h3>최성은 프로필</h3>
-      <li>이름: 짱구 (본명: 최성은)</li>
+<p style="margin-top:40px;"> <h2>최성은 그녀는 누구인가?</h2>
+  <br><img src="최성은얼굴1" width="50%"></br>
+
+   <style="margin-top:4px;"> <h3> 최성은 프로필 </h3>
+  <ul>  <li>이름: 짱구 (본명: 최성은)</li>
       <li>생년월일: 2004년 4월 24일 </li>
       <li>나이: 시발살 (어우어우 실수^^)</li>
       <li>행선지: 감자왕국(강원도 어딘가) </li>
@@ -15,7 +16,7 @@
       <li>이상형: 짱구</li>
       <li>좋아하는 스포츠팀: 원주 DB 프로미</li>
       <li>유행어: 쯔읍!, 그러면 안돼지</li>
-      <li>좋아하는 동물: 강아지(개),수달, 고양이, 코끼리, 새^^ <img src="비둘기" width="100%"> </li>
-
+      <li>좋아하는 동물: 강아지(개),수달,
+        고양이, 코끼리, 새^^ <img src="비둘기" width="30%"> </li>
   </ul>
 </body>
