--- a/최성은.html
+++ b/최성은.html
@@ -1,5 +1,5 @@
 <body>
-  <h1><a>WIKIPEDIA</a></h1>
+  <h1><a href=>WIKIPEDIA</a></h1>
 
 <p style="margin-top:40px;"> <h2>최성은 그녀는 누구인가?</h2>
   <br><img src="최성은얼굴1.jpg" width="7"></br>
