--- a/최성은.html
+++ b/최성은.html
@@ -2,7 +2,7 @@
   <h1><a href=>WIKIPEDIA</a></h1>
 
 <p style="margin-top:40px;"> <h2>최성은 그녀는 누구인가?</h2>
-  <br><img src="최성은얼굴1.jpg" width="7"></br>
+  <br><img src="최성은얼굴1.jpg" width="7%"></br>
 
    <style="margin-top:4px;"> <h3> 최성은 프로필 </h3>
   <ul>  <li>이름: 짱구 (본명: 최성은)</li>
