--- a/최성은.html
+++ b/최성은.html
@@ -8,6 +8,7 @@
   <ul>  <li>이름: 짱구 (본명: 최성은)</li>
       <li>생년월일: 2004년 4월 24일 </li>
       <li>나이: 시발살 (어우어우 실수^^)</li>
+      <li>혈액형: A형</li>
       <li>행선지: 감자왕국(강원도 어딘가) </li>
       <li>신분: 감자왕국 공주(병) </li>
       <li>성격: 변태(만지는걸 선호함/S에 해당함)<br>
@@ -19,4 +20,18 @@
       <li>좋아하는 동물: 강아지(개),수달,
         고양이, 코끼리, 새^^ <img src="비둘기.jpg" width="5%"> </li>
   </ul>
+ <p>이름,최성은 짱구라고 불리는 것을 좋아하며 자칭 감자왕국 공주이다. 
+  작년 2020년에 북원여자고등학교에 입학하였으며 지금은 짬이 좀 찬 2학년이다.
+<br>집에서 하는 일은 뒹굴뒹굴 거리기, 유튜브보기, 감자폭탄제조 등이 있으며 감자폭탄 제조는
+베일에 싸여 그 진행도를 알 수 없으나 감자가 많은 나라인 만큼 그 진행속도는 빠를 것으로 전망된다.
+<br>직업으로는 학생, 공주, 병장 등이 있으며 특히 공주라는 증거는 아직 어디에도 보이지 않고있다.
+    병장이라는 직업도 아직 단 한 번도 부대에 발 한 번 들여본적 없는 것으로 파악되나 스스로 짬밥이 대충 3~4년이라고 주장한다.
+<br> 최성은은 동물을 좋아하며 새를 싫어한다.
+<br> 아기자기한 것을 좋아하며 글씨 예쁘다는 말을 좋아하며 꾸미는 것을 좋아한다. 장래희망은 수의사로 건국대 수의학과를 목표로
+하는 정시파이터라고 할 수 있겠다. 이제 수의사까지 직업으로 가진다면 4개직종을 가지게 되는 것이다.
+<br>최성은에게는 다른 사람에게는 없는 것이 있는데, 그것이 바로 '마음의 끈'이라는 것이다. 그게 무엇인지 일반인들은 잘 모르지만
+마음의 끈이 풀리면 감정기복이 심해지고 자꾸 '아프리카를 가서 코끼를 봐야한다'는 얘기를 하는 걸 보면 
+그녀의 '마음의 끈'은 우리가 일반적으로 알고있는 정신줄 같은 것이라고 보면 될 것 같다. (또한 그녀는 단 한번도 코끼리를 실제로 본적이 없다고 한다. 대한민국에서 조차..)
+     <br> -LYC해 리포터 - 
+ </p>
 </body>
