--- a/운동.html
+++ b/운동.html
@@ -1,12 +1,10 @@
-<!DOCTYPE HTML>
-<head>
-  <title>SeongEun news</title> <meta charset="utf-8">
-</head>
 <body>
-  <h1><a href="index.html">성은 신문</a></h1>
-  <ol>
-      <li><a href="운동">운동</a></li>
-      <li><a href="식단">식단</a></li>
-      <li><a href="g">화보촬영</a></li>
-  </ol>
+  <h1><a href="index.html">최성은 식단</a></h1>  <meta charset="utf-8">
+  <br>
+  <br> <br> <h2> 최성은 채식26일차, 소신발언하다</h2> <br>
+"삼겹살을 지글지글지글 옆에도 버섯도 지글지글지글 깻잎에다가 살짝 뜨끈뜨끈한 밥 넣고
+<br> 뜨거운 삼겹살이랑 버섯 넣고 입에 오라라랄 오물오물오물 먹고 ㅠ 다먹으면 
+<br> 이제 두번째 삼겹살에 버섯을 올려서 밥이랑 오뮬오물 버섯이랑 밥이랑 오물오물오물
+<br> 김치도 지글지글지글 그걸 이제 밥이랑 오뇨뇬묜 아 배고파"
+
 </body>
