--- a/운동.html
+++ b/운동.html
@@ -1,10 +1,30 @@
 <body>
-  <h1><a href="index.html">최성은 식단</a></h1>  <meta charset="utf-8">
-  <br>
-  <br> <br> <h2> 최성은 채식26일차, 소신발언하다</h2> <br>
-"삼겹살을 지글지글지글 옆에도 버섯도 지글지글지글 깻잎에다가 살짝 뜨끈뜨끈한 밥 넣고
-<br> 뜨거운 삼겹살이랑 버섯 넣고 입에 오라라랄 오물오물오물 먹고 ㅠ 다먹으면 
-<br> 이제 두번째 삼겹살에 버섯을 올려서 밥이랑 오뮬오물 버섯이랑 밥이랑 오물오물오물
-<br> 김치도 지글지글지글 그걸 이제 밥이랑 오뇨뇬묜 아 배고파"
-
-</body>
+  <h1><a href="index.html"><strong>[운동]</strong> </a></h1>
+   <meta charset="utf-8">
+<br>
+<h1> <strong>인간병기 최성은 운동 </strong></h1>
+ <h2> <strong><*긴급속보* 방학동안 팔굽15개 -> 20개에 도천!!></strong> </h2>
+2020년 1월 6일 강원도 원주시 감자왕국에 거주하는 최모씨 딸 최성은씨는 이예찬과학자의
+인간병기 실험에 참여하였다.
+<br>처음 최성은씨를 만났을 때 그녀의 몸은 지방으로 만들어진 지방인간이었다. 근육이란건
+찾아볼 수 조차 없었고, 걸어댕기는게 신기했을 뿐이었다. 거기에 학교와 집에서 받은 스트레스로 인해
+스트레스성 폭식을 진행중이었다.
+<br> 이예찬과학자는 인간병기 프로젝트를 폐기해야하나 하루에 100번이상 생각을 했다고 한다.
+하지만 0.!5%의 가능성을 갖고 프로젝트는 시작이 되었다.
+<br>팔굽을 할 수 없는 팔을 가진 지방인간 성은은 정상적인 팔굽이 되지 않았다.
+그래서 하루에 무릎대고 10개씩 10세트라는 어마무시한 양의 운동을 시작했다.
+<br> 지방인간 최성은씨는 하루하루를 근육통으로 인해 아파했으며 찡찡이 모드로 변신하여
+이예찬과학자를 공격했지만 그는 끄덕하지 않고 프로젝트를 진행했다.
+<br>매달 그렇게 진행하다보니 지방인간의 수행능력은 향상되고 2021년 2월 19일 부터는 무릎을
+대지않고도 팔굽혀피기를 할 수 있게 되었으며 4회씩 10세트를 진행하게 되었다.
+<br> 그 이후 또 혹독한 훈련을 받으면서 지방인간은 진화를 거듭했다. 밥은 여전히 스트레스성 폭식으로 인해
+무자비하게 먹었지만 팔뚝살은 점점 더 빠지기 시작했고 점점 팔목을 잡기 쉬워지고 있었다.
+<br> rmflrh 2021년 7월 성은은 드디어 지방인간에서 근육몬으로 진화를 시작했으며 학교 체육관에서
+친구들에게 자신이 팔굽하는 모습을 보여주면서 1RM(한번에) 20회라는 신기록을 달성하면서 친구들에게
+어마어마한 관심을 받아냈다.
+<br>이에 힘을 얻은 근육몬 성은은 방학전까지 한번에 15회까지를 달성했으며 운동에 맛을 들이기 시작하였다.
+<br>이번 방학 목표로는 20회*5세트로 총합 100개로 잡고 한 걸음 한 걸음 나아가는 중이다.
+요즘 뺀질거림이 심해져 일주일에 1번 휴식을 어기고 1번이상 쉴때가 비번이 발생하나, 그 다음날이라도
+채우는 노력에 이예찬 과학자는 묵묵히 지켜보는 중이다.
+이예찬과학자는"성은아 앞으로도 힘내서 방학전까지 꼭 100개를 달성하자"라는 말을 남겼다.
+<br>-프랑케슈타인 기자-
