--- a/운동.html
+++ b/운동.html
@@ -3,7 +3,7 @@
    <meta charset="utf-8">
 <br>
 <h1> <strong>인간병기 최성은 운동 </strong></h1>
- <h2> <strong><*긴급속보* 방학동안 팔굽15개 -> 20개에 도천!!></strong> </h2>
+ <h2> <strong><*긴급속보* 방학동안 팔굽15개 -> 20개에 도전!!></strong> </h2>
 2020년 1월 6일 강원도 원주시 감자왕국에 거주하는 최모씨 딸 최성은씨는 이예찬과학자의
 인간병기 실험에 참여하였다.
 <br>처음 최성은씨를 만났을 때 그녀의 몸은 지방으로 만들어진 지방인간이었다. 근육이란건
@@ -19,7 +19,7 @@
 대지않고도 팔굽혀피기를 할 수 있게 되었으며 4회씩 10세트를 진행하게 되었다.
 <br> 그 이후 또 혹독한 훈련을 받으면서 지방인간은 진화를 거듭했다. 밥은 여전히 스트레스성 폭식으로 인해
 무자비하게 먹었지만 팔뚝살은 점점 더 빠지기 시작했고 점점 팔목을 잡기 쉬워지고 있었다.
-<br> rmflrh 2021년 7월 성은은 드디어 지방인간에서 근육몬으로 진화를 시작했으며 학교 체육관에서
+<br>2021년 7월 성은은 드디어 지방인간에서 근육몬으로 진화를 시작했으며 학교 체육관에서
 친구들에게 자신이 팔굽하는 모습을 보여주면서 1RM(한번에) 20회라는 신기록을 달성하면서 친구들에게
 어마어마한 관심을 받아냈다.
 <br>이에 힘을 얻은 근육몬 성은은 방학전까지 한번에 15회까지를 달성했으며 운동에 맛을 들이기 시작하였다.
